@@ -62,4 +62,8 @@ void InjectedBundle::activateMacFontAscentHack()
 {
 }
 
+void InjectedBundle::platformInitialize(const WebProcessCreationParameters&)
+{
+}
+
 } // namespace WebKit
